--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,4 +2,4 @@ copy.src.files=false
 copy.src.target=
 index.file=
 run.as=LOCAL
-url=http://localhost/kohanahtml5plate/
+url=http://kohanahtml5boilerplate.lh
